Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/Enhanced_Vetting__c.object-meta.xml
<CustomObject>
    <label>Enhanced Vetting</label>
    <nameField>
        <label>Enhanced Vetting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Vettings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>