Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enhanced Vettings</relationshipLabel>
    <relationshipName>Enhanced_Vettings</relationshipName>
    <type>Lookup</type>
</CustomField>