Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Cancellation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date_Time__c</fullName>
    <label>Cancellation Date/Time</label>
    <type>DateTime</type>
</CustomField>