Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Cancellation_Other__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Other__c</fullName>
    <label>Cancellation Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>