Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Cancellation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Reason__c</fullName>
    <label>Cancellation Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Too much documentation</fullName>
            </value>
            <value>
                <fullName>Vetting process too lengthy</fullName>
            </value>
            <value>
                <fullName>Technical issue</fullName>
            </value>
            <value>
                <fullName>Not comfortable completing</fullName>
            </value>
            <value>
                <fullName>Changed my mind</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>