Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Cancelled_By__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_By__c</fullName>
    <label>Cancelled By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>