Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Enhanced Vettings</relationshipLabel>
    <relationshipName>Enhanced_Vettings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>