Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <label>Client</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Royal Mail Group</fullName>
            </value>
            <value>
                <fullName>Crown Commercial Services</fullName>
            </value>
            <value>
                <fullName>Capita</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>