Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Client_Logo__c.field-meta.xml
<CustomField>
    <fullName>Client_Logo__c</fullName>
    <label>Client Logo</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>