Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Complete_Percent__c.field-meta.xml
<CustomField>
    <fullName>Complete_Percent__c</fullName>
    <label>Complete Percent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>