Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Completed_Documents__c.field-meta.xml
<CustomField>
    <fullName>Completed_Documents__c</fullName>
    <label>Completed Documents</label>
    <summaryFilterItems>
        <field>Vetting_Document__c.Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </summaryFilterItems>
    <summaryForeignKey>Vetting_Document__c.Enhanced_Vetting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>