Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Document1__c.field-meta.xml
<CustomField>
    <fullName>Document1__c</fullName>
    <label>Document1</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>