Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Document2__c.field-meta.xml
<CustomField>
    <fullName>Document2__c</fullName>
    <label>Document2</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>