Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Document3__c.field-meta.xml
<CustomField>
    <fullName>Document3__c</fullName>
    <label>Document3</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>