Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Document_6__c.field-meta.xml
<CustomField>
    <fullName>Document_6__c</fullName>
    <label>Document 6</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>