Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Document_7__c.field-meta.xml
<CustomField>
    <fullName>Document_7__c</fullName>
    <label>Document 7</label>
    <length>70000</length>
    <type>Html</type>
</CustomField>