Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Level_of_DBS_Required__c.field-meta.xml
<CustomField>
    <fullName>Level_of_DBS_Required__c</fullName>
    <label>Level of DBS Required</label>
    <length>100</length>
    <type>Text</type>
</CustomField>