Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/PORTW__c.field-meta.xml
<CustomField>
    <fullName>PORTW__c</fullName>
    <label>PORTW</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>