Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/PORTW_Added__c.field-meta.xml
<CustomField>
    <fullName>PORTW_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PORTW Added</label>
    <type>Checkbox</type>
</CustomField>