Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/RMG_EC__c.field-meta.xml
<CustomField>
    <fullName>RMG_EC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RMG EC</label>
    <type>Checkbox</type>
</CustomField>