Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Client__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting Candidate Completion</fullName>
            </value>
            <value>
                <fullName>Vetting Team Review</fullName>
            </value>
            <value>
                <fullName>Exceptional Circumstances</fullName>
            </value>
            <value>
                <fullName>Stage 1 Complete</fullName>
            </value>
            <value>
                <fullName>Stage 2 Complete</fullName>
            </value>
            <value>
                <fullName>Vetting Complete</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>