Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Verified_By__c.field-meta.xml
<CustomField>
    <fullName>Verified_By__c</fullName>
    <label>Verified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>