Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Verified_Documents__c.field-meta.xml
<CustomField>
    <fullName>Verified_Documents__c</fullName>
    <label>Verified Documents</label>
    <summaryForeignKey>Vetting_Document__c.Enhanced_Vetting__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>