Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Vetting_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Complete_Date_Time__c</fullName>
    <label>Vetting Complete Date/Time</label>
    <type>DateTime</type>
</CustomField>