Frankbelford/uatv1ba/force-app/main/default/objects/Enhanced_Vetting__c/fields/Vetting_Started_By__c.field-meta.xml
<CustomField>
    <fullName>Vetting_Started_By__c</fullName>
    <label>Vetting Started By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>